# model

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  COREM_L_README.md  DEPLOYMENT_ROCM.md  DESIGN.txt  GraniteCoreMLApp.swift  MATRYOSHKA.md  README.md  RECURSION.md  SERVING.md  SPARSE.md  act_demo  act_demo.cpp  architecture_summary.py  basic_demo.py  comparison.py  convert_granite_to_coreml.py  coreml_inference.py  demo.py  final_demo.py  granite_coreml_demo.py  mac_hybrid_demo.py  overview.py  requirements.txt  run_demo.py  run_granite_coreml.sh  setup_granite_coreml.py  simple_comparison.py  simple_overview.py  summary.py  test_granite_model.py  test_hybrid_comparison.py  test_sparse_attention.cpp
.github/workflows/: build.yml  model-build.yml  model-olympus.yml
data/: .env.example  .gitignore  README.md  SEC_DATA_COLLECTION_README.md  UNIFIED_FETCHER_README.md  build_comprehensive_cik_db.py  edgar_fetcher.py  fetch_sec_data.sh  fred_fetcher.py  unified_data_fetcher.js
db/: __init__.py  database.py  models.py  repository.py
db/migrate/: env.py
include/: act_controller.h  attention.h  compact_positional_encoding.h  compact_positional_encoding_f32.h  context_first_architecture.h  feedforward.h  hybrid_attention.h  layer_norm.h  mamba.h  matryoshka_encoder.h  sparse_attention.h  tensor_ops.h  ticker_vocabulary.h  tokenizer.h  transformer.h
python/: vector_database_client.py
scripts/: convert_to_gguf.py  fetch_all_tickers.py  fetch_alpaca_symbols.py  generate_full_symbol_list.py
sql/: create_vector_schema.sql
src/: act_controller.cpp  attention.cpp  attention_benchmark.cpp  feedforward.cpp  financial_prediction_demo.cpp  hybrid_attention.cpp  hybrid_attention_benchmark.cpp  layer_comparison_benchmark.cpp  layer_norm.cpp  main.cpp  mamba.cpp  matryoshka_benchmark.cpp  matryoshka_encoder.cpp  matryoshka_trainer.cpp  model_exporter.cpp  sparse_attention.cpp  tensor_ops.cpp  ticker_vocabulary.cpp  tokenizer.cpp  transformer.cpp  transformer_production.cpp
